# path-tracer

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  denoise  path-tracer  readme.md
output/albedo_maps/: Buddha.pfm  David.pfm  Other.pfm  Thinker.pfm
output/denoised_renders/: Buddha.pfm  David.pfm  Other.pfm  Thinker.pfm
output/noisy_renders/: Buddha.pfm  David.pfm  Other.pfm  Thinker.pfm
output/normal_maps/: Buddha.pfm  David.pfm  Other.pfm  Thinker.pfm
src/: aabb.cpp  aabb.hpp  background.cpp  background.hpp  bvh.cpp  bvh.hpp  camera.cpp  camera.hpp  main.cpp  materials.cpp  materials.hpp  objects.cpp  objects.hpp  ray.cpp  ray.hpp  readme.md  scenes.hpp  utils.cpp  utils.hpp
src/core/: background.cpp  background.hpp  camera.cpp  camera.hpp  materials.cpp  materials.hpp  objects.cpp  objects.hpp  ray.cpp  ray.hpp
src/dependancies/: colors.hpp  readme.md
src/dependancies/OpenImageDenoise/lib/: libOpenImageDenoise.so.1
src/dependancies/OpenImageDenoise/lib/cmake/OpenImageDenoise-1.3.0/: OpenImageDenoiseConfigVersion.cmake
src/dependancies/lib/cmake/OpenImageDenoise-1.3.0/: OpenImageDenoiseConfig-release.cmake
src/dependancies/stb/: stb_image.cpp
src/optim/: aabb.cpp  aabb.hpp  bvh.cpp  bvh.hpp
src/scenes/: CornellBox.scene.h  David.scene.h  DefaultScene.scene.h  GlowRoom.scene.h  Marbles.scene.h  Other.scene  Other.scene.h  Statue.scene.h  Test.scene.h  Thinker.scene.h  VaryingFuzz.scene.h
src/shaders/: bsdf.cpp  bsdf.hpp
src/utils/: pdf.cpp  pdf.hpp  utils.cpp  utils.hpp
